refactor: extract mathBackend into its own file across source sets